--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=procedimientosrp
 # Datos de la base de datos
-spring.datasource.url=jdbc:sqlserver://LAPTOP-IGDIRBID:1433;databaseName=PROCEDIMIENTOS;encrypt=false;trustServerCertificate=true
+spring.datasource.jdbc-url=jdbc:sqlserver://LAPTOP-IGDIRBID:1433;databaseName=PROCEDIMIENTOS;encrypt=false;trustServerCertificate=true
 spring.datasource.username=sa
 spring.datasource.password=123456
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
@@ -9,3 +9,11 @@ spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
+
+# HikariCP settings
+spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.maximum-pool-size=20
+spring.datasource.hikari.idle-timeout=30000
+spring.datasource.hikari.max-lifetime=2000000
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.pool-name=HikariPoolOrcl
