backend hasta implementar citas

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,15 @@
 spring.application.name=procedimientosrp
-# Datos de la base de datos
-spring.datasource.jdbc-url=jdbc:sqlserver://LAPTOP-IGDIRBID:1433;databaseName=PROCEDIMIENTOS;encrypt=false;trustServerCertificate=true
-spring.datasource.username=sa
-spring.datasource.password=123456
-spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+# Base de datos PROCEDIMIENTOS
+spring.datasource.procedimientosrp.jdbc-url=jdbc:sqlserver://LAPTOP-IGDIRBID:1433;databaseName=PROCEDIMIENTOS;encrypt=false;trustServerCertificate=true
+spring.datasource.procedimientosrp.username=sa
+spring.datasource.procedimientosrp.password=123456
+spring.datasource.procedimientosrp.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
+# Base de datos SIGH
+secondary.datasource.url=jdbc:sqlserver://LAPTOP-IGDIRBID:1433;databaseName=SIGH;encrypt=false;trustServerCertificate=true
+secondary.datasource.username=sa
+secondary.datasource.password=123456
+secondary.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
 # Configuración de JPA
 spring.jpa.hibernate.ddl-auto=update
