dockerizando antes del angular funcionando

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,22 +1,15 @@
 spring.application.name=procedimientosrp
-# Base de datos PROCEDIMIENTOS
-spring.datasource.procedimientosrp.jdbc-url=jdbc:sqlserver://LAPTOP-IGDIRBID:1433;databaseName=PROCEDIMIENTOS;encrypt=false;trustServerCertificate=true
+
+# Base de datos PROCESIMIENTOS
+spring.datasource.procedimientosrp.jdbc-url=jdbc:sqlserver://localhost:1435;databaseName=PROCEDIMIENTOS;encrypt=false;trustServerCertificate=true
 spring.datasource.procedimientosrp.username=sa
-spring.datasource.procedimientosrp.password=123456
+spring.datasource.procedimientosrp.password=SimplePass123
 spring.datasource.procedimientosrp.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
-# Base de datos SIGH
-secondary.datasource.url=jdbc:sqlserver://LAPTOP-IGDIRBID:1433;databaseName=SIGH;encrypt=false;trustServerCertificate=true
-secondary.datasource.username=sa
-secondary.datasource.password=123456
-secondary.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
-
-# Configuración de JPA
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
 
-# HikariCP settings
 spring.datasource.hikari.minimum-idle=5
 spring.datasource.hikari.maximum-pool-size=20
 spring.datasource.hikari.idle-timeout=30000
