--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=procedimientosrp
 
 # Base de datos PROCESIMIENTOS
-spring.datasource.procedimientosrp.jdbc-url=jdbc:sqlserver://localhost:1435;databaseName=PROCEDIMIENTOS;encrypt=false;trustServerCertificate=true
+spring.datasource.procedimientosrp.jdbc-url=jdbc:sqlserver://LAPTOP-IGDIRBID:1433;databaseName=PROCEDIMIENTOS;encrypt=false;trustServerCertificate=true
 spring.datasource.procedimientosrp.username=sa
-spring.datasource.procedimientosrp.password=SimplePass123
+spring.datasource.procedimientosrp.password=123456
 spring.datasource.procedimientosrp.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
 spring.jpa.hibernate.ddl-auto=update
