agregando ordneamiento fecha y tambien el endpoint para traer procedimiento general con su id servicio , remplazar losa rchivos del belen antes de envair a prod

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,11 @@ spring.application.name=procedimientosrp
 
 # Base de datos PROCESIMIENTOS
 spring.datasource.procedimientosrp.jdbc-url=jdbc:sqlserver://LAPTOP-IGDIRBID:1433;databaseName=PROCEDIMIENTOS;encrypt=false;trustServerCertificate=true
+# Base de datos SIGH
+secondary.datasource.url=jdbc:sqlserver://host.docker.internal:1433;databaseName=SIGH;encrypt=false;trustServerCertificate=true
+secondary.datasource.username=sa
+secondary.datasource.password=123456
+secondary.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.datasource.procedimientosrp.username=sa
 spring.datasource.procedimientosrp.password=123456
 spring.datasource.procedimientosrp.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
